<resources>
    <string name="app_name">MyToDo</string>
    <string name="textview">my task</string>
    <string name="addbuttondescription">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_importance">Task importance</string>
    <string name="high">HIGH</string>
    <string name="normal">NORMAL</string>
    <string name="low">LOW</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="enter_task_details">Enter task details</string>
    <string name="default_task_title">default_task_title</string>
    <string name="no_desc_msg">no_desc_msg</string>
    <string name="todo">TODO</string>
    <string name="TextView">TextView</string>
    <string name="TextView2">TextView</string>
</resources>